--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,9 @@
   border-radius: 15px;
   margin:4px;
 }
+.recipe:hover{
+  background-color: azure;
+}
 
 .recipewrapper{
   display: block;
@@ -77,6 +80,11 @@
 
 h1{
   width: 100%;
+
+}
+
+*{
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 .flexcontainer{
